--- a/src/AuthService/Dockerfile
+++ b/src/AuthService/Dockerfile
@@ -9,4 +9,4 @@ RUN dotnet publish ""AuthService.csproj"" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=build /app/publish .
-ENTRYPOINT [""dotnet"", ""AuthService.dll""]
+ENTRYPOINT ["dotnet", "AuthService.dll"]
