--- a/src/DataProcessorService/Dockerfile
+++ b/src/DataProcessorService/Dockerfile
@@ -9,4 +9,4 @@ RUN dotnet publish ""DataProcessorService.csproj"" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=build /app/publish .
-ENTRYPOINT [""dotnet"", ""DataProcessorService.dll""]
+ENTRYPOINT ["dotnet", "DataProcessorService.dll"]
