--- a/src/GatewayService/Dockerfile
+++ b/src/GatewayService/Dockerfile
@@ -9,4 +9,4 @@ RUN dotnet publish ""GatewayService.csproj"" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=build /app/publish .
-ENTRYPOINT [""dotnet"", ""GatewayService.dll""]
+ENTRYPOINT ["dotnet", "GatewayService.dll"]
